--- a/front-mobile/package.json
+++ b/front-mobile/package.json
@@ -13,7 +13,8 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
-    "expo": "~38.0.8",
+    "expo": "^38.0.10",
+    "expo-cli": "^3.27.4",
     "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
